[0.3.3] postMessageReceivedProc機能とsubProtocolProcess機能を削除。

--- a/example/chat_example/chat_client.html
+++ b/example/chat_example/chat_client.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>WebSocket Chat</title>
+  <title>bamboo websocket chat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -13,22 +13,22 @@
 
   <div class="container pl-0 pr-0">
     <nav class="navbar navbar-dark bg-dark mb-2">
-      <a href="#" class="navbar-brand">Bamboo Sample Chat🐼</a>
+      <a href="#" class="navbar-brand">Bamboo Sample Chat🌱</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navmenu1"
         aria-controls="navmenu1" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navmenu1">
         <div class="navbar-nav">
-          <a id="connect" class="nav-item nav-link" href="javascript:connect_socket();">接続</a>
-          <a id="close" class="nav-item nav-link" href="javascript:close_socket();">閉じる</a>
+          <a id="connect" class="nav-item nav-link" href="javascript:connect_socket();">Connect</a>
+          <a id="close" class="nav-item nav-link" href="javascript:close_socket();">Close</a>
         </div>
       </div>
     </nav>
   </div>
 
   <div class="container">
-    <p class="lead">Bamboo WebSocket Sample Chat🐼へようこそ</p>
+    <p class="lead">Welcome to Bamboo WebSocket Sample Chat</p>
 
     <div id="message_container" class="container" style="padding-bottom: 70px;">
       <div id="comments" class="container"></div>
@@ -38,7 +38,7 @@
       <div id="form" class="row p-3">
         <input id="m" class="col-9" type="text" class="form-control" autocomplete="off"
           placeholder="Shift + Enter => Send" /><button type="button" class="btn btn-outline-info col-3"
-          onclick="send_message()">送信</button>
+          onclick="send_message()">Send</button>
       </div>
     </div>
 
@@ -56,13 +56,13 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="label1">接続完了</h5>
+            <h5 class="modal-title" id="label1">Connected✅</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
-            Web Socket Serverとの接続が完了しました。
+            Successfully connected to the WebSocket server.
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-outline-info" data-dismiss="modal">OK</button>
@@ -76,14 +76,14 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="label1">接続に失敗しました</h5>
+            <h5 class="modal-title" id="label1">Couldn't connect❌</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
-            Web Socket Serverとの接続に失敗しました。<br>
-            再度接続してください。
+            Could not connect to the WebSocket server."<br>
+            Please try connecting again.
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-outline-info" data-dismiss="modal">OK</button>
@@ -97,14 +97,14 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="label1">接続が切れました</h5>
+            <h5 class="modal-title" id="label1">Disconnected❗</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
-            Web Socket Serverとの接続が切れました。<br>
-            再度接続してください。
+            Disconnected from the WebSocket server.<br>
+            Please try connecting again.
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-outline-info" data-dismiss="modal">OK</button>
@@ -118,21 +118,21 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="label1">ユーザ－アイコンを選択してください</h5>
+            <h5 class="modal-title" id="label1">Please select your icon</h5>
           </div>
           <div class="modal-body">
             <div class="form-group">
               <select id="tag" class="form-control">
-                <option value="1">🐼</option>
-                <option value="2">👻</option>
-                <option value="3">🐱</option>
-                <option value="4">🐷</option>
-                <option value="5">🐌</option>
-                <option value="6">🐧</option>
-                <option value="7">🐸</option>
-                <option value="8">🐎</option>
-                <option value="9">🦥</option>
-                <option value="10">🐥</option>
+                <option value="1">🥺</option>
+                <option value="2">🤥</option>
+                <option value="3">😳</option>
+                <option value="4">😐</option>
+                <option value="5">🥶</option>
+                <option value="6">🥵</option>
+                <option value="7">🫨</option>
+                <option value="8">🤓</option>
+                <option value="9">🥹</option>
+                <option value="10">👺</option>
               </select>
             </div>
           </div>
@@ -148,16 +148,16 @@
       document.getElementById("close").style.pointerEvents = 'none';
 
       const tags = {
-        "1": "🐼",
-        "2": "👻",
-        "3": "🐱",
-        "4": "🐷",
-        "5": "🐌",
-        "6": "🐧",
-        "7": "🐸",
-        "8": "🐎",
-        "9": "🦥",
-        "10": "🐥",
+        "1": "🥺",
+        "2": "🤥",
+        "3": "😳",
+        "4": "😐",
+        "5": "🥶",
+        "6": "🥵",
+        "7": "🫨",
+        "8": "🤓",
+        "9": "🥹",
+        "10": "👺",
       };
 
       var socket = null;
@@ -172,7 +172,7 @@
         document.getElementById("selected_tag").value = tag;
 
         try {
-          socket = new WebSocket("ws://localhost:9001/chat", [tag]);
+          socket = new WebSocket("ws://localhost:9001/chat", [encodeURIComponent(tag)]);
           socket.onopen = on_open
           socket.onmessage = on_message
           socket.onclose = on_close
@@ -241,7 +241,7 @@
       const connect_socket = () => {
         var tag = document.getElementById("selected_tag").value;
         try {
-          socket = new WebSocket("ws://localhost:9001/chat", [tag]);
+          socket = new WebSocket("ws://localhost:9001/chat", [encodeURIComponent(tag)]);
           socket.onopen = on_open
           socket.onmessage = on_message
           socket.onclose = on_close
